# caltracker

./: main  readme.md  test.txt
client/: Cargo.toml  readme.md
client/src/: date.rs  main.rs  model.rs  msg.rs
client/src/render/: day.rs  entry.rs  mod.rs  title.rs
client/static/api/: list
server/: Cargo.toml  Rocket.toml  readme.md
server/migrations/2018-01-17-092456_Initial/: down.sql  up.sql
server/src/: lib.rs  main.rs  model.rs  pg_pool.rs  schema.rs
shared/: Cargo.toml
shared/src/: lib.rs  model.rs
