[package]
name = "server"
version = "0.1.0"
authors = ["Victor Koenders <victor.koenders@gmail.com>"]

[dependencies]
diesel = { version = "*", features = ["postgres", "uuid"] }
diesel_codegen = { version = "*", features = ["postgres"] }
r2d2 = "*"
r2d2-diesel = "*"
dotenv = "*"
rocket = "*"
rocket_contrib = "*"
rocket_codegen = "*"
uuid = { version = "<0.6.0", features = ["v4"] }
shared = { path = "../shared" }

